hphp/hack/test/typecheck/array/disallow_read_from_append.php.rust_elab.exp
File "disallow_read_from_append.php", line 6, characters 8-9:
Cannot use `[]` for reading (NastCheck[3047])
File "disallow_read_from_append.php", line 6, characters 8-11:
Cannot use `[]` for reading (NastCheck[3047])
